<resources>
    <string name="app_name">Project 1</string>
    <string name="edit_file">Enter URL of file</string>
    <string name="button_display">Enter</string>
    <string name="text_main">Houses will be displayed here.</string>
    <string name="action_favorite" />
    <string name="action_settings">Settings</string>
    <string name="opt1">Display List</string>
    <string name="opt2">Load From Web File</string>
    <string name="opt3">Add House from Asset File</string>
    <string name="opt4">Show House Details</string>
    <string name="opt5">Remove House</string>
    <string name="opt6">Weighted Average Property Tax</string>
    <string name="opt7">Number of Mansions</string>
</resources>